--- a/01_quienesSomos.html
+++ b/01_quienesSomos.html
@@ -15,7 +15,7 @@
          <a href="00_index.html"><img src="images/logo.png" alt="Logo Global Lingua"></a>
          <nav>
             <ul>
-                <li><a href="00_index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="01_quienesSomos.html">Quiénes somos</a></li>
                 <li><a href="02_nuestroPrograma.html">Nuestro Programa</a></li>
                 <li><a href="03_contacto.html">Contacto</a></li>
