--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <!--Encabezado (Menú)-->
     <header>
-         <a href="00_index.html"><img src="images/logo.png" alt="Logo Global Lingua"></a>
+         <a href="index.html"><img src="images/logo.png" alt="Logo Global Lingua"></a>
          <nav>
             <ul>
-                <li><a href="00_index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="01_quienesSomos.html">Quiénes somos</a></li>
                 <li><a href="02_nuestroPrograma.html">Nuestro Programa</a></li>
                 <li><a href="03_contacto.html">Contacto</a></li>
