--- a/02_nuestroPrograma.html
+++ b/02_nuestroPrograma.html
@@ -12,7 +12,7 @@
 <body>
      <!--Encabezado (Menú)-->
     <header>
-         <a href="00_index.html"><img src="images/logo.png" alt="Logo Global Lingua"></a>
+         <a href="index.html"><img src="images/logo.png" alt="Logo Global Lingua"></a>
          <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
